# CS585-HW

./: .gitignore  README.md
A2/: README.md  collect_data.py  collect_data.sh  main.py  main.sh  pyproject.toml  save_segmented_frames.sh
A2/a2/algorithms/: classification.py  segmentation.py
A2/a2/data/: preprocessing.py  utils.py
A2/a2/evaluate/: stats.py  visualize_results.py
A2/conf/: config.yaml
A2/experiments/class_1/.hydra/: config.yaml
A2/experiments/class_1/outputs/: stats.csv
A2/experiments/class_2/.hydra/: config.yaml
A2/experiments/class_2/outputs/: stats.csv
A2/experiments/class_3/.hydra/: config.yaml
A2/experiments/class_3/outputs/: stats.csv
A2/experiments/class_4/.hydra/: config.yaml
A2/experiments/class_4/outputs/: stats.csv
A2/experiments/class_5/.hydra/: config.yaml
A2/experiments/class_5/outputs/: metadata.csv  stats.csv
A2/experiments/demo/: stats.csv
A2/experiments/demo/.hydra/: config.yaml  hydra.yaml
A2/experiments/demo/outputs/: metadata.csv  stats.csv
A2/templates/binary_images/: labels.csv
A2/templates/original/: labels.csv
A2/tools/: evaluate.sh  prepare_finger_templates.sh  prepare_hand_templates.sh  prepare_templates.py  prepare_templates.sh  save_segmented_frames.py  save_segmented_frames.sh
A3/: README.md  main.py  pyproject.toml
A3/a3/algorithms/: matching.py  object_detection.py  object_tracking.py  single_object_tracking.py
A3/a3/utils/: __init__.py  draw.py
A3/data/: part_2_frame_dict.json
A3/data/submission/: part_1_object_tracking.json  part_2_frame_dict.json
A3/tools/: prepare_data.py
(+16 files in other folders)
